middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: test-ipwhitelist
  namespace: default
spec:
  ipWhiteList:
    sourceRange:
      - 127.0.0.1/32
